--- a/shipment-service/src/main/resources/application.yaml
+++ b/shipment-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@
 server:
    port: 8088
    servlet:
-      context-path: /shipping
+      context-path: /shipment
       encoding:
          charset: UTF-8
          enabled: true
@@ -11,10 +11,10 @@ server:
 # Spring configuration
 spring:
    application:
-      name: shipping-service
+      name: shipment-service
    data:
       mongodb:
-         uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/shipping_service?authSource=admin}
+         uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/shipment_service?authSource=admin}
    kafka:
       properties:
          security.protocol: PLAINTEXT
@@ -25,7 +25,7 @@ spring:
       consumer:
          bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          auto-offset-reset: earliest
-         group-id: shipping-service-group
+         group-id: shipment-service-group
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
          value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
          properties:
