--- a/webapp-storefront/package.json
+++ b/webapp-storefront/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "storefront",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "npx prettier --write ."
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
-  }
+   "name": "storefront",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "format": "npx prettier --write ."
+   },
+   "dependencies": {
+      "@stripe/react-stripe-js": "stripe/react-stripe-js",
+      "@stripe/stripe-js": "stripe/stripe-js",
+      "axios": "^1.7.7",
+      "init": "^0.1.2",
+      "lodash": "^4.17.21",
+      "moment": "^2.30.1",
+      "next": "14.2.13",
+      "react": "^18",
+      "react-bootstrap": "^2.10.5",
+      "react-cookies": "^0.1.1",
+      "react-dom": "^18",
+      "shadcn": "^2.1.0",
+      "sweetalert2": "^11.14.1"
+   },
+   "devDependencies": {
+      "@types/node": "^20",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "eslint": "^8",
+      "eslint-config-next": "14.2.13",
+      "postcss": "^8",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5"
+   }
 }
