--- a/docker-compose.tools.yml
+++ b/docker-compose.tools.yml
@@ -1,4 +1,4 @@
-name: scms
+name: scms-tools
 
 networks:
    scms-network:
@@ -22,11 +22,11 @@ services:
    #      networks:
    #         - scms-network
    kafka:
-      image: 'bitnami/kafka:3.7.0'
+      image: "bitnami/kafka:3.7.0"
       container_name: kafka
       hostname: kafka
       ports:
-         - '9094:9094'
+         - "9094:9094"
       environment:
          - KAFKA_CFG_NODE_ID=0
          - KAFKA_CFG_PROCESS_ROLES=controller,broker
@@ -38,7 +38,7 @@ services:
       networks:
          - scms-network
    swagger-ui:
-      image: 'swaggerapi/swagger-ui:v4.16.0'
+      image: "swaggerapi/swagger-ui:v4.16.0"
       restart: unless-stopped
       hostname: swagger-ui
       container_name: swagger-ui
@@ -64,12 +64,12 @@ services:
    #      networks:
    #         - scms-network
    mysql:
-      image: 'mysql:8.0.39-debian'
+      image: "mysql:8.0.39-debian"
       restart: unless-stopped
       hostname: mysql
       container_name: mysql
       ports:
-         - '3306:3306'
+         - "3306:3306"
       environment:
          - MYSQL_ROOT_PASSWORD=root
       volumes:
@@ -78,25 +78,25 @@ services:
       networks:
          - scms-network
    mongodb:
-      image: 'bitnami/mongodb:7.0.11'
+      image: "bitnami/mongodb:7.0.11"
       restart: unless-stopped
       hostname: mongodb
       container_name: mongodb
       ports:
-         - '27017:27017'
+         - "27017:27017"
       environment:
          - MONGODB_ROOT_USER=root
          - MONGODB_ROOT_PASSWORD=root
       networks:
          - scms-network
    neo4j:
-      image: 'neo4j:latest'
+      image: "neo4j:latest"
       restart: unless-stopped
       hostname: neo4j
       container_name: neo4j
       ports:
-         - '7474:7474'
-         - '7687:7687'
+         - "7474:7474"
+         - "7687:7687"
       environment:
          - NEO4J_AUTH=neo4j/admin@123
       networks:
