--- a/webapp-storefront/package.json
+++ b/webapp-storefront/package.json
@@ -33,11 +33,10 @@
       "next-themes": "^0.3.0",
       "react": "^18",
       "react-bootstrap": "^2.10.5",
-      "react-cookies": "^0.1.1",
       "react-dom": "^18",
       "react-hook-form": "^7.53.0",
       "sass": "^1.79.4",
-      "sweetalert2": "^11.14.1",
+      "sonner": "^1.5.0",
       "tailwind-merge": "^2.5.3",
       "tailwindcss-animate": "^1.0.7",
       "zod": "^3.23.8"
