--- a/docker-compose.tools.yml
+++ b/docker-compose.tools.yml
@@ -9,18 +9,18 @@ volumes:
    mysql:
 
 services:
-   #   nginx:
-   #      image: 'nginx:1.25.3'
-   #      restart: unless-stopped
-   #      hostname: nginx
-   #      container_name: nginx
-   #      ports:
-   #         - "80:80"
-   #      volumes:
-   #         - ./docker/nginx/templates:/etc/nginx/templates
-   #         - ./docker/nginx/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
-   #      networks:
-   #         - scms-network
+   nginx:
+   image: 'nginx:1.25.3'
+   restart: unless-stopped
+   hostname: nginx
+   container_name: nginx
+   ports:
+      - "80:80"
+   volumes:
+      - ./docker/nginx/templates:/etc/nginx/templates
+      - ./docker/nginx/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
+   networks:
+      - scms-network
    kafka:
       image: "bitnami/kafka:3.7.0"
       container_name: kafka
