📌 update .env file

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-# Stripe Service
+# Stripe
 STRIPE_SECRET_KEY=
 
-# Brevo Service
+# Brevo
 MAIL_API_KEY=
 
-# AWS S3 Service
+# AWS S3
 AWS_ACCESS_KEY_ID=
 AWS_SECRET=
 S3_BUCKET_NAME=
