--- a/.github/workflows/product-ci.yaml
+++ b/.github/workflows/product-ci.yaml
@@ -1,4 +1,4 @@
-name: product service ci
+name: product-service ci
 
 on:
    push:
@@ -35,19 +35,19 @@ jobs:
          -  name: Run Maven Build Command
             run: mvn clean install -pl product-service -am -DskipTests
          #         -  name: Run Maven Test
-         #            run: mvn test -f product
+         #            run: mvn test -f product-service
          #         -  name: Unit Test Results
          #            uses: dorny/test-reporter@v1
          #            if: ${{ env.FROM_ORIGINAL_REPOSITORY == 'true' && (success() || failure()) }}
          #            with:
          #               name: Unit-Test-Results
-         #               path: "product/**/surefire-reports/*.xml"
+         #               path: "product-service/**/surefire-reports/*.xml"
          #               reporter: java-junit
          #         -  name: Analyze with sonar cloud
          #            if: ${{ env.FROM_ORIGINAL_REPOSITORY == 'true' }}
          #            env:
          #               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-         #            run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -f product
+         #            run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -f product-service
          -  name: Log in to the Container registry
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/login-action@v3
