--- a/identity-service/pom.xml
+++ b/identity-service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.tth</groupId>
-        <artifactId>scms</artifactId>
+        <artifactId>HarmonyChain</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
