--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -8,9 +8,9 @@
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>gateway-service</artifactId>
+    <artifactId>api-gateway</artifactId>
     <version>${revision}</version>
-    <name>gateway-service</name>
+    <name>api-gateway</name>
     <description>API Gateway | Microservices Architecture</description>
 
     <dependencies>
