--- a/.github/workflow-template.yaml
+++ b/.github/workflow-template.yaml
@@ -61,12 +61,12 @@ jobs:
             with:
                context: ./{{SERVICE_NAME}}-service
                push: true
-               tags: ghcr.io/hiepthanhtran/scms-{{SERVICE_NAME}}:latest
+               tags: ghcr.io/hiepthanhtran/harmony-{{SERVICE_NAME}}:latest
          -  name: Make Docker image public using REST API
             if: ${{ github.ref == 'refs/heads/main' }}
             run: |
                curl -X PATCH \
                  -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                  -H "Accept: application/vnd.github.v3+json" \
-                 https://api.github.com/user/packages/container/scms-{{SERVICE_NAME}}/versions \
+                 https://api.github.com/user/packages/container/harmony-{{SERVICE_NAME}}/versions \
                  -d '{"visibility":"public"}'
