--- a/.github/workflows/api-gateway-ci.yaml
+++ b/.github/workflows/api-gateway-ci.yaml
@@ -1,19 +1,19 @@
-name: gateway-service ci
+name: api-gateway ci
 
 on:
    push:
       branches: [ "main" ]
       paths:
-         - "gateway-service/**"
+         - "api-gateway/**"
          - ".github/workflows/actions/action.yaml"
-         - ".github/workflows/gateway-ci.yaml"
+         - ".github/workflows/api-gateway-ci.yaml"
          - "pom.xml"
    pull_request:
       branches: [ "main" ]
       paths:
-         - "gateway-service/**"
+         - "api-gateway/**"
          - ".github/workflows/actions/action.yaml"
-         - ".github/workflows/gateway-ci.yaml"
+         - ".github/workflows/api-gateway-ci.yaml"
          - "pom.xml"
    workflow_dispatch:
 
@@ -33,21 +33,21 @@ jobs:
                fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
          -  uses: ./.github/workflows/actions
          -  name: Run Maven Build Command
-            run: mvn clean install -pl gateway-service -am -DskipTests
+            run: mvn clean install -pl api-gateway -am -DskipTests
          #         -  name: Run Maven Test
-         #            run: mvn test -f gateway-service
+         #            run: mvn test -f api-gateway
          #         -  name: Unit Test Results
          #            uses: dorny/test-reporter@v1
          #            if: ${{ env.FROM_ORIGINAL_REPOSITORY == 'true' && (success() || failure()) }}
          #            with:
          #               name: Unit-Test-Results
-         #               path: "gateway-service/**/surefire-reports/*.xml"
+         #               path: "api-gateway/**/surefire-reports/*.xml"
          #               reporter: java-junit
          #         -  name: Analyze with sonar cloud
          #            if: ${{ env.FROM_ORIGINAL_REPOSITORY == 'true' }}
          #            env:
          #               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-         #            run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -f gateway-service
+         #            run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -f api-gateway
          -  name: Log in to the Container registry
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/login-action@v3
@@ -59,14 +59,14 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./gateway-service
+               context: ./api-gateway
                push: true
-               tags: ghcr.io/hiepthanhtran/scms-gateway:latest
+               tags: ghcr.io/hiepthanhtran/harmony-api-gateway:latest
          -  name: Make Docker image public using REST API
             if: ${{ github.ref == 'refs/heads/main' }}
             run: |
                curl -X PATCH \
                  -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                  -H "Accept: application/vnd.github.v3+json" \
-                 https://api.github.com/user/packages/container/scms-gateway/versions \
+                 https://api.github.com/user/packages/container/harmony-api-gateway/versions \
                  -d '{"visibility":"public"}'
