--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <modules>
         <module>common-library</module>
-        <module>gateway-service</module>
+        <module>api-gateway</module>
         <module>file-service</module>
         <module>notification-service</module>
 
