refactor: 🌐 update docker-compose file and nginx configs

--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -1,9 +1,9 @@
-name: scms-services
+name: harmony-services
 
 networks:
-   scms-network:
+   harmony-network:
       driver: bridge
-      name: scms-network
+      name: harmony-network
 
 volumes:
    mysql:
@@ -20,7 +20,7 @@ services:
          - ./docker/nginx/templates:/etc/nginx/templates
          - ./docker/nginx/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
       networks:
-         - scms-network
+         - harmony-network
    mysql:
       image: "mysql:8.0.39-debian"
       restart: unless-stopped
@@ -34,7 +34,7 @@ services:
          - ./docker/db/mysql_initial.sql:/docker-entrypoint-initdb.d/mysql_initial.sql
          - mysql:/var/lib/mysql
       networks:
-         - scms-network
+         - harmony-network
    mongodb:
       image: "bitnami/mongodb:7.0.11"
       restart: unless-stopped
@@ -46,7 +46,7 @@ services:
          - MONGODB_ROOT_USER=root
          - MONGODB_ROOT_PASSWORD=root
       networks:
-         - scms-network
+         - harmony-network
    neo4j:
       image: "neo4j:latest"
       restart: unless-stopped
@@ -58,7 +58,7 @@ services:
       environment:
          - NEO4J_AUTH=neo4j/admin@123
       networks:
-         - scms-network
+         - harmony-network
    kafka:
       image: "bitnami/kafka:3.7.0"
       container_name: kafka
@@ -74,7 +74,7 @@ services:
          - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
          - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       networks:
-         - scms-network
+         - harmony-network
    swagger-ui:
       image: "swaggerapi/swagger-ui:v4.16.0"
       restart: unless-stopped
@@ -86,7 +86,7 @@ services:
          - OAUTH_CLIENT_ID=swagger-ui
          - OAUTH_USE_PKCE=true
       networks:
-         - scms-network
+         - harmony-network
    phpmyadmin:
       image: 'phpmyadmin'
       restart: unless-stopped
@@ -99,4 +99,4 @@ services:
       links:
          - mysql
       networks:
-         - scms-network
+         - harmony-network
