--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>api-gateway</module>
         <module>file-service</module>
         <module>notification-service</module>
+        <module>search-service</module>
 
         <module>cart-service</module>
         <module>identity-service</module>
@@ -41,6 +42,7 @@
 
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
+        <org.elasticsearch.version>8.14.3</org.elasticsearch.version>
         <projectlombok-lombok.version>1.18.30</projectlombok-lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     </properties>
@@ -53,6 +55,11 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch</artifactId>
+                <version>${org.elasticsearch.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
